[package]
name = "bomby"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs_ldtk = "0.5"
bevy-inspector-egui = "0.14"
bevy_kira_audio = { version = "0.13", features = ["wav"] }
bevy_ninepatch = "0.9"
iyes_loopless = "0.9"
leafwing-input-manager = "0.7"

itertools = "0.10"
noise = { git = "https://github.com/bsurmanski/noise-rs", rev = "5abdde1b819eccc47e74969c15e1b56ae5a055d6" }
rand = { version = "0.8", default_features = false, features = ["std", "small_rng"] }

[dependencies.bevy]
version = "0.9"
default_features = false
features = ["png"]

[features]
default = ["x11"]
dev = ["bevy/dynamic"]
x11 = ["bevy/x11"]
wayland = ["bevy/wayland"]

[profile.dev.package."*"]
opt-level = 3
